Cropping issue updated

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,8 +3,6 @@ body {
     background-color: #ffffff;
     color: #141414;
     transition: background-color 0.3s, color 0.3s;
-    -webkit-overflow-scrolling: touch; /* Enable smooth scrolling */
-    overflow-y: scroll; /* Allow vertical scrolling */
 }
 
 .container {
@@ -13,11 +11,10 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    padding: 20px;
 }
 
 .titleContainer {
-    margin-bottom: 50px;
+    margin-bottom: 10px;
 }
 
 .title {
@@ -53,7 +50,7 @@ body {
     justify-content: center;
     text-align: center;
     margin-top: 10px;
-    touch-action: pan-x pan-y; /* Disable pinch zoom */
+    touch-action: pan-x pan-y;
 }
 
 .image {
@@ -66,11 +63,6 @@ body {
 .loading {
     font-size: 24px;
     font-weight: bold;
-}
-
-.prediction {
-    margin-top: 10px;
-    margin-bottom: 10px;
 }
 
 .predictionText {
